# lua-toolchain

./: .gitignore  Cargo.toml  example.lua
crates/inspector/: Cargo.toml  package.json  webpack.config.js
crates/inspector/src/: lib.rs
crates/inspector/src-js/: main.js
crates/inspector/static/: global.css  index.html
crates/parser/: Cargo.toml  test.lua
crates/parser/src/: main.rs  span.rs
crates/parser/src/lex/: file_iter.rs  mod.rs  token.rs
crates/parser/src/parse/: ast.rs  mod.rs
src/: iter.rs  lex.rs  main.rs  span.rs
src/lex/: file_iter.rs  mod.rs  token.rs  util.rs
src/parse/: ast.rs
