[package]
name = "xlua"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "ansi", "registry"] }
