[package]
name = "inspector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
parser = { path = "../parser" }
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element"] }
js-sys = "0.3.69"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
log = "0.4.21"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
